# shijima

./: CMakeLists.txt  CMakePresets.json  README.md
.github/actions/check-ubuntu/: action.yml
.github/actions/install-clang/: action.yml
.github/actions/install-gcc/: action.yml
.github/actions/load-json-file/: action.yml
.github/actions/load-yaml-file/: action.yml
.github/workflows/: ci.yml  run-test.yml  test.yml
ci/run-test/: env-matrix.json  env-matrix.yml
include/shijima/: shijima.hpp
tests/: CMakeLists.txt
tests/compile/: compile_basic.cpp  compile_concepts.cpp
tests/odr/: odr_a.cpp  odr_b.cpp  odr_main.cpp
tests/run/: run_basic.cpp
tools/: run-local.ps1
